Updated keyboard spacing issue

--- a/src/pages/css/keyboard.css
+++ b/src/pages/css/keyboard.css
@@ -442,7 +442,6 @@ body {
 .keyboard__keysContainer {
   display: flex;
   flex-wrap: wrap;
-  gap: 3vw;
   width: 100%;
   height: 100%;
   justify-content: space-around;
@@ -460,7 +459,6 @@ body {
 .keyboard__keysContainer--fourColumns {
   display: flex;
   flex-wrap: wrap;
-  gap: 3vw;
   width: 100%;
   height: 100%;
   justify-content: space-around;
@@ -478,7 +476,6 @@ body {
 .keyboard__keysContainer--threeColumns {
   display: flex;
   flex-wrap: wrap;
-  gap: 3vw;
   width: 100%;
   height: 100%;
   justify-content: space-around;
