--- a/src/pages/scss/_components.scss
+++ b/src/pages/scss/_components.scss
@@ -125,7 +125,6 @@
 @mixin pagination-grid($columns: 5) {
     display: flex;
     flex-wrap: wrap;
-    gap: 3vw;
     width: 100%;
     height: 100%;
     justify-content: space-around;
